--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
+:root{
+  font-family: 'Montserrat', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
-* {
-  margin: 0;
-  padding: 0;
+
+h1,h2,h3,h4,h5,p,span,a{
+  color: #FAFAFF;
 }
