feat: Add dark background color, update gsap dependency, and remove unused icon import.

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 :root{
   font-family: 'Montserrat', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color:#090a0c;
 }
 
 button:hover {
